// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ContactAccountSelection 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      open-contacts
    </button>
    <button
      type="button"
    >
      open-accounts
    </button>
    <button
      type="button"
    >
      sort-items
    </button>
  </div>
  <div
    data-testid="overlay-contacts"
  >
    <button
      type="button"
    >
      close-contacts
    </button>
    <button
      type="button"
    >
      confirm-contacts
    </button>
  </div>
  <div
    data-testid="overlay-accounts"
  >
    <button
      type="button"
    >
      close-accounts
    </button>
    <button
      type="button"
    >
      confirm-accounts
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render ContactAccountSelection with data 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      open-contacts
    </button>
    <button
      type="button"
    >
      open-accounts
    </button>
    <button
      type="button"
    >
      sort-items
    </button>
    <div
      data-testid="item-c2"
    >
      <button
        type="button"
      >
        remove-c2
      </button>
      <button
        type="button"
      >
        click-c2
      </button>
      <div
        class="item"
      >
        Max Mustermann
      </div>
    </div>
    <div
      data-testid="item-a3"
    >
      <button
        type="button"
      >
        remove-a3
      </button>
      <button
        type="button"
      >
        click-a3
      </button>
      <div
        class="item"
      >
        Sulu
      </div>
    </div>
    <div
      data-testid="item-c3"
    >
      <button
        type="button"
      >
        remove-c3
      </button>
      <button
        type="button"
      >
        click-c3
      </button>
      <div
        class="item"
      >
        Erika Mustermann
      </div>
    </div>
  </div>
  <div
    data-testid="overlay-contacts"
  >
    <button
      type="button"
    >
      close-contacts
    </button>
    <button
      type="button"
    >
      confirm-contacts
    </button>
  </div>
  <div
    data-testid="overlay-accounts"
  >
    <button
      type="button"
    >
      close-accounts
    </button>
    <button
      type="button"
    >
      confirm-accounts
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render disabled ContactAccountSelection 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-item-selection"
  >
    <button
      disabled=""
      type="button"
    >
      open-contacts
    </button>
    <button
      disabled=""
      type="button"
    >
      open-accounts
    </button>
    <button
      type="button"
    >
      sort-items
    </button>
  </div>
  <div
    data-testid="overlay-contacts"
  >
    <button
      type="button"
    >
      close-contacts
    </button>
    <button
      type="button"
    >
      confirm-contacts
    </button>
  </div>
  <div
    data-testid="overlay-accounts"
  >
    <button
      type="button"
    >
      close-accounts
    </button>
    <button
      type="button"
    >
      confirm-accounts
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render loading ContactAccountSelection 1`] = `
<DocumentFragment>
  <div
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      open-contacts
    </button>
    <button
      type="button"
    >
      open-accounts
    </button>
    <button
      type="button"
    >
      sort-items
    </button>
    <div
      data-testid="contact-account-selection-loading"
    />
  </div>
  <div
    data-testid="overlay-contacts"
  >
    <button
      type="button"
    >
      close-contacts
    </button>
    <button
      type="button"
    >
      confirm-contacts
    </button>
  </div>
  <div
    data-testid="overlay-accounts"
  >
    <button
      type="button"
    >
      close-accounts
    </button>
    <button
      type="button"
    >
      confirm-accounts
    </button>
  </div>
</DocumentFragment>
`;
